<resources>
    <string name="app_name">後台CRUD App</string>
    <string name="title_result">查詢結果</string>
    <string name="title_create">新增</string>
    <string name="result_ment_delete">刪除</string>
    <string name="form_lab_name">姓名</string>
    <string name="form_lab_age">年齡</string>
    <string name="form_lab_phone">電話</string>
    <string name="form_btn_cancle">取消</string>
    <string name="form_lab_update">更新</string>
    <string name="form_btn_create">新增</string>
    <string name="empty_reeor">3個欄位都不可以是空的</string>
</resources>