<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_result"
    app:startDestination="@+id/navigation_result">

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.crudapplication.ui.result.ResultFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_result" />

    <dialog
        android:id="@+id/navigation_create"
        android:name="com.example.crudapplication.ui.form.FormFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_form" >

    </dialog>
    <action
        android:id="@+id/action_global_navigation_create"
        app:destination="@id/navigation_create"
        app:popUpTo="@id/navigation_result" />
</navigation>